[gd_scene load_steps=4 format=3 uid="uid://cdtcsog7vcadd"]

[ext_resource type="Script" uid="uid://c6ybxqq2fux34" path="res://scripts/cartas/carta.gd" id="1_6jlk1"]
[ext_resource type="Texture2D" uid="uid://bnpneyytespif" path="res://assets/cartas/asArit.png" id="2_6jlk1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fawr1"]
size = Vector2(149, 209)

[node name="asArit" type="Node2D"]
show_behind_parent = true
script = ExtResource("1_6jlk1")
attack_value = 1
card_name = "asArit"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-210, 150)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_6jlk1")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_fawr1")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
